# openxr-explorer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buildrelease.bat
.github/workflows/: cmake.yml
cmake/: AddPath.xml  json.cmake
generator/: GenerateProperties.ps1
src/: CMakeLists.txt
src/common/: CMakeLists.txt  xr_runtime_default.h  xr_runtime_template.h  xr_runtimes.txt  xrruntime.cpp  xrruntime.h
src/openxrexplorer/: CMakeLists.txt  app_cli.cpp  app_cli.h  app_imgui.cpp  app_imgui.h  array.h  main.cpp  openxr_info.cpp  openxr_info.h  openxr_properties.cpp  openxr_properties.h  resource.h  resource.rc
src/openxrexplorer/imgui/: imgui_impl_skg.cpp  imgui_impl_skg.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_impl_x11.cpp  imgui_impl_x11.h  imgui_shader.hlsl  imgui_shader.hlsl.h  imgui_skg.cpp  imgui_skg.h  sk_gpu.h
src/xrsetruntime/: CMakeLists.txt  xrruntime_main.cpp
